welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:-6: error: Missing closing brace `}' assumed here
try {
^caughtSpeeding:1: error: expected class or object definition
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
^